--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     ]
   },
   "dependencies": {
+    "@sanity/client": "^7.12.1",
+    "@sanity/image-url": "^1.2.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "next-sanity": "^11.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sanity": "^4.15.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
