--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-sanity": "^11.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.6.0",
     "sanity": "^4.15.0",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
